--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "license": "ISC",
   "dependencies": {
     "airtable": "^0.7.2",
+    "axios": "^0.19.0",
     "dotenv": "^8.2.0",
-    "fs-extra": "^8.1.0"
+    "fs-extra": "^8.1.0",
+    "p-limit": "^2.2.1"
   },
   "devDependencies": {
     "@types/airtable": "^0.5.6",
